# ros_traversability

./: .gitignore  .project
elevation_mapper/: CMakeLists.txt  package.xml
elevation_mapper/include/: elevationmapper.h
elevation_mapper/launch/: elevation_mapper.launch
elevation_mapper/src/: elevation_mapper_node.cpp  elevationmapper.cpp  laser_oscillator.py  orientation_correction.py  orientation_correction_camera.py  test.cpp
flipper_control/: CMakeLists.txt  package.xml
flipper_control/cfg/: FlipperControl.cfg  broadcaster.cfg  goodFitPlanevalue
flipper_control/include/flipper_control/: CalcFlipperAngles.h  ClcNESM.h  CropMap.h  FitPlane.h  FlipperAngles.h  FlipperControl.h  GetContactPoints.h  NESM.h
flipper_control/launch/: FlipperControl.launch  FlipperTf.launch
flipper_control/src/: CalcFlipperAngles.cpp  ClcNESM.cpp  CropMap.cpp  FitPlane.cpp  FlipperAngles.cpp  FlipperControl.cpp  GetContactPoints.cpp  NESM.cpp  clcNESM.cpp  desired_pose_tf_broadcaster.cpp  dynamic_node.cpp  flipper_control_server.cpp  flipper_tf_broadcaster.cpp  plane_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_broadcaster.cpp
flipper_control/src/include/: CalcFlipperAngles.h  ClcNESM.h  FitPlane.h  FlipperControl.h  GetContactPoints.h  clcNESM.h
hector_trajectory_server/launch/: hector.launch
hector_trajectory_server/src/: hector_trajectory_server.cpp
robot_navigation/: CMakeLists.txt  package.xml
robot_navigation/cfg/: StairBehavior.cfg  Step.cfg  StepBehavior.cfg  TrackingControl.cfg
robot_navigation/include/robot_navigation/: ContourPathPlanner.h  FlipperControl.h  RobotControl.h  RobotControlNoPre.h  RobotDrive.h  SnakeMode.h  StairBehavior.h  StepBehavior.h  TrackingControl.h  YamlToMsgConverter.h
robot_navigation/launch/: FlipperControl.launch  SimMap.launch  auto_robot_navigation.launch
robot_navigation/robot_configs/: GETjag.yaml  GETjagFlipperWorld.yaml
robot_navigation/src/: ApproachPoint.cpp  ContourPathPlanner.cpp  FlipperControl.cpp  FlipperControl2.cpp  RobotControl.cpp  RobotControlNoPre.cpp  RobotDrive.cpp  SnakeMode.cpp  StairBehavior.cpp  StepBehavior.cpp  TrackingControl.cpp  YamlToMsgConverter.cpp  auto_robot_navigation_server.cpp  flipper_control_server.cpp  robot_navigation_server.cpp  robot_navigation_server2.cpp  track_movement.cpp  zhangsuen.cpp
robot_navigation/src/include/: ApproachPoint.h  ContourPathPlanner.h  FlipperControl.h  RobotControl.h  RobotDrive.h  TrackingControl.h  zhangsuen.h
simulation_control/: CMakeLists.txt  package.xml
simulation_control/config/: drl_flipper_objects.2yaml  drl_flipper_objects.yaml
simulation_control/include/simulations_kontrolle/: GetObjectInfoFromYaml.h  MazeReader.h  SimulationsKontrolleFlipper.h  SimulationsKontrolleNavigation.h
simulation_control/launch/: create_map.launch  create_map_random.launch  gazebo_control.launch  gazebo_random_control.launch
simulation_control/mazegenerator-master/: maze1.txt  maze3.txt
simulation_control/mazegenerator-master/src/: cellborder.cpp  cellborder.h  makefile  maze.cpp  rectangularmaze.cpp
simulation_control/src/: SimulationControlFlipper.cpp  SimulationControlNavigation.cpp  get_text_file_data.cpp  simulation_flipper_control_node.cpp  simulation_navigation_control_node.cpp
simulations_kontrolle/: CMakeLists.txt  package.xml
simulations_kontrolle/include/simulations_kontrolle/: MazeReader.h  SimulationsKontrolleFlipper.h  SimulationsKontrolleNavigation.h
simulations_kontrolle/launch/: gazebo_random_control.launch
simulations_kontrolle/mazegenerator-master/: maze4.txt
simulations_kontrolle/mazegenerator-master/src/: main.cpp
simulations_kontrolle/src/: GetObjectInfoFromYaml.cpp  MazeReader.cpp  SimulationsKontrolleFlipper.cpp  SimulationsKontrolleNavigation.cpp
traversability_estimation-master/traversability_estimation/: CMakeLists.txt  bla.txt  package.xml
traversability_estimation-master/traversability_estimation/config/: drl_flipper_objects.yaml  drl_objects.yaml  robot.yaml  robot2.yaml  robot_filter_parameter.yaml
traversability_estimation-master/traversability_estimation/include/traversability_estimation/: GazebObjectControl.h  GazebRandomObjectControl.h  GetObjectInfoFromYaml.h  MazeReader.h  OMPLPlannerWrapper.h  RobotPathPlanner.h  TraverabilityObjective.h  TraversabilityEstimation.hpp  TraversabilityMap.hpp
traversability_estimation-master/traversability_estimation/launch/: traversability_estimation3.launch
traversability_estimation-master/traversability_estimation/maps/: traversability_map.bag
traversability_estimation-master/traversability_estimation/mazegenerator-master/: example.txt  maze2.txt
traversability_estimation-master/traversability_estimation/mazegenerator-master/src/: main.cpp  mazegen
traversability_estimation-master/traversability_estimation/object_robocup_wall10m/: model.config  model.sdf
traversability_estimation-master/traversability_estimation/object_robocup_wall10m/meshes/: object_robocup_wall10m.dae
traversability_estimation-master/traversability_estimation/object_robocup_wall20m/: model.config  model.sdf
traversability_estimation-master/traversability_estimation/object_robocup_wall20m/meshes/: object_robocup_wall20m.dae
traversability_estimation-master/traversability_estimation/object_robocup_wall250/: model.config  model.sdf
traversability_estimation-master/traversability_estimation/object_robocup_wall250/meshes/: object_robocup_wall250.dae
traversability_estimation-master/traversability_estimation/src/: GazebObjectControl.cpp  GazebRandomObjectControl.cpp  GetObjectInfoFromYaml.cpp  MazeReader.cpp  OMPLPlannerWrapper.cpp  OMPLPlannerWrapper2.cpp  OMPLPlannerWrapper3.cpp  OptimalPlanning.cpp  RobotPathPlanner.cpp  TraverabilityObjective .cpp  TraversabilityEstimation.cpp  TraversabilityMap.cpp  gazebo_control_node.cpp  gazebo_random_control_node.cpp  get_text_file_data.cpp  robot_positioning_node.cpp  robot_positioning_node2.cpp  robot_positioning_node_random.cpp  traversability_estimation_node.cpp
