<?xml version="1.0"?>
<package format="2">
  <name>robot_navigation</name>
  <version>0.0.0</version>
  <description>The robot_navigation package</description>

  <maintainer email="anofen@todo.todo">anofen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roslib</depend>
  <depend>nav_msgs</depend>
  <depend>cv3_bridge</depend>
  <depend>image_transport</depend>
  <depend>get_std_msgs</depend>
  <depend>get_vis_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>visualization_msgs</depend>
  <depend>dynamixel_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
